# CRM

./: .env  .env.example  .gitignore  AUTHORIZATION_GUIDE.md  COUNSELOR_SYSTEM_GUIDE.md  Dockerfile  SETUP.md  SYSTEM_STATUS.md  check_mongodb.py  main.py  package-lock.json  pyproject.toml  render.yaml  requirements.txt  test_auth.py  test_imports.py  test_objectid.py  test_role_assignment.py  test_role_fix.py  test_student_auth.py
.github/workflows/: deploy.yml
app/: main.py
app/api/: routes.py
app/api/endpoints/: admin.py  admin_counselor.py  counselor.py  counselor_communication.py  counselor_leads.py  student.py  student_complex.py.backup  user.py
app/core/: authorization.py  config.py  database.py  dependencies.py  init_auth.py  init_counselor_auth.py  new_dependencies.py  security.py
app/model/: base.py  counselor.py  role.py  student.py  user.py
app/repository/: base.py  counselor.py  role.py  student.py  student_complex.py.backup  student_simple.py  user.py
app/schema/: auth.py  counselor.py  role.py  student.py  user.py
app/services/: email_notification.py  s3_upload.py  sms_notification.py
endpoints/: admin_endpoints.py  chat_endpoints.py  org_endpoints.py  phonepe_endpoints.py  pricing_endpoints.py  referral_endpoints.py  test_endpoints.py  user_endpoints.py
scripts/: generate_token.py
