[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.2",
    "jwt>=1.4.0",
    "loguru>=0.7.3",
    "passlib>=1.7.4",
    "pydantic>=2.11.9",
    "pyjwt>=2.10.1",
    "pymongo>=4.15.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
